[package]
name = "diverter"
version = "2.0.0"
description = "quickly switch between Steam accounts on Windows."
authors = ["Yehuthi <yehuthith@gmail.com>"]
repository = "https://github.com/yehuthi/diverter"
license = "MIT OR Apache-2.0"
keywords = ["steam", "account", "manager", "switcher", "gaming"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.1.1", features = ["derive"] }
thiserror = "1.0.38"
winapi = "0.3.9"

[build-dependencies]
cc = "1.0.78"

[profile.release]
panic = "abort"
strip = true
lto = true
